<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<properties>
		<version>1.1.010</version>
	</properties>

	<groupId>org.nachc.cad.tools</groupId>
	<artifactId>github-backup</artifactId>
	<version>${version}</version>

	<packaging>jar</packaging>

	<name>github-backup</name>
	<description>This project provides functionality to backup all of a github users repositories</description>
	<url>https://github.com/NACHC-CAD/github-backup</url>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>John Gresh</name>
			<email>johngresh@curlewconsulting.com</email>
			<organization>NACHC</organization>
			<organizationUrl>https.www.nachc.org</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/NACHC-CAD/github-backup</connection>
		<developerConnection>scm:git:ssh://github.com:NACHC-CAD/github-backup.git</developerConnection>
		<url>http://github.com/NACHC-CAD/github-backup/tree/master</url>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>bedatadriven</id>
			<name>bedatadriven</name>
			<url>https://nexus.bedatadriven.com/content/groups/public/</url>
		</repository>
		<repository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</repositories>

	<!-- 
	*
	* dependencies
	*
	-->

	<dependencies>

		<!-- CORE NACHC FRAMEWORK STUFF -->
		<dependency>
			<groupId>org.nachc.cad.tools</groupId>
			<artifactId>core</artifactId>
			<version>1.1.009</version>
		</dependency>

		<!-- 
		*
		* BASIC TOOLS
		*
		* -->

		<!-- LOMBOK (Lombok jar also needs to be added to Eclipse IDE) -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.8</version>
			<scope>provided</scope>
		</dependency>

		<!-- SLF4J LOGBACK CLASSIC https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.3</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.30</version>
		</dependency>

		<!-- JUNIT https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

		<!-- JUNIT-TOOLBOX https://mvnrepository.com/artifact/com.googlecode.junit-toolbox/junit-toolbox -->
		<dependency>
			<groupId>com.googlecode.junit-toolbox</groupId>
			<artifactId>junit-toolbox</artifactId>
			<version>2.4</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<!-- 
	*
	* build
	*
	-->

	<build>

		<pluginManagement>
			<plugins>

				<!-- compiler -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<release>11</release>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>

		<plugins>

			<!-- create the jar file -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>org.nachc.tools.githubbackup.main.GitHubBackupMain</mainClass>
						</manifest>
						<manifestEntries>
							<Class-Path>.</Class-Path>
						</manifestEntries>
					</archive>
					<!--
					<finalName></finalName>
					-->
				</configuration>
			</plugin>

			<!-- don't run the integration tests -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>

			<!-- 
			*
			* Generate sources and java docs (required for mvn distribution) 
			*
			* -->

			<!-- source -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- javadoc -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>

